-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 7.0.2
-
None
-
Kubuntu 22.04
-
-
b1e73ca45d (qt-creator/qt-creator/master) b1e73ca45d (qt-creator/qt-creator/8.0)
In the following code snippet:
#define FOO 1 #define BAR 1 const char text[] = #if defined(FOO) "Hello" #endif #if defined(BAR) "World" #endif ;
the first #endif and second #if defined are highlighted as string literals instead of preprocessor keywords.
clangd is enabled.
- relates to
-
QTCREATORBUG-26693 Whitespace has same color as text in "String"
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-27601 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 413502,2 | ClangCodeModel: Try harder to catch bogus AST ranges | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |